GET transaction by id
